Terraform/security.tf
resource "aws_security_group" "allow_tls" {
  name        = "Terraform-ec2-sg"
  description = "Security Group for EC2 from Terraform side"

  tags = {
    Name = "Terraform-ec2-sg"
  }

  ingress {
    description = "SSH"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  ingress {
    description = "HTTP"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  egress{
    from_port  = 0
    to_port    = 0
    protocol   = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

}
